# ATOM

000_Scripts/: master_save  mkex  (+4 more)
180405A-tag/: .format_update.swp  05052018162903.td  Makefile  Makefile.am  Makefile.in  TODO  config.status  configure  configure.ac  main.c  makefile  match.c  match.h  optarg.c  optarg.h  tag  tag.1  tag.h  tag_delete.c  tag_get.c  tag_list.c  tag_query.c  tag_query.h  tag_set.c  tag_tagged.c  tag_untagged.c  tagtest  utils.c  utils.h  version.h
180405A-tag/autom4te.cache/: output.0  requests  traces.1
180405A-tag/build_files/: .autocfmk.swp  Makefile.am  autocfmk  debmkb
180405A-tag/doc/: tag.1
180405A-tag/src/: build_qtree.c  format.c  main.c  match.c  optarg.c  read_write.c  tag_delete.c  tag_get.c  tag_list.c  tag_query.c  tag_restore.c  tag_set.c  tag_tagged.c  tag_untagged.c  utils.c
180405A-tag/src/.deps/: build_qtree.Po  format.Po  main.Po  match.Po  optarg.Po  query_checker.Po  read_write.Po  tag_delete.Po  tag_get.Po  tag_list.Po  tag_query.Po  tag_restore.Po  tag_save.Po  tag_set.Po  utils.Po
180405A-tag/src/include/: format.h  info.h  optarg.h  read_write.h  tag.h  tag_query.h  utils.h  version.h  xattr_max.h
180405A-tag/tag_package_debian/: tag_0.3.0-1.debian.tar.xz  tag_0.3.0-1.dsc  tag_0.3.0-1_amd64.build  tag_0.3.0-1_amd64.changes  tag_0.3.0-1_amd64.deb  tag_0.5.0-1.debian.tar.xz  tag_0.5.0-1_amd64.build  tag_0.5.0-1_amd64.changes  tag_0.5.0-1_amd64.deb
180508A-libtag/autobuild/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
180508A-libtag/autobuild/autom4te.cache/: output.0  output.1  output.2  requests  traces.1  traces.2
180508A-libtag/autobuild/doc/: tag.1
180508A-libtag/autobuild/src/: build_qtree.c  libtag.c  main.c  optarg.c  query_checker.c  tag_query.c  tag_save.c  utils.c
(+2408 files in other folders)
