AUTOMAKE_OPTIONS = foreign subdir-objects
bin_PROGRAMS = tag
tag_SOURCES = src/include/format.h\
src/include/info.h\
src/include/main.h\
src/include/optarg.h\
src/include/read_write.h\
src/include/tag.h\
src/include/tag_query.h\
src/include/utils.h\
src/include/xattr_max.h\
src/build_qtree.c\
src/format.c\
src/main.c\
src/match.c\
src/optarg.c\
src/query_checker.c\
src/read_write.c\
src/tag_delete.c\
src/tag_get.c\
src/tag_list.c\
src/tag_query.c\
src/tag_restore.c\
src/tag_save.c\
src/tag_set.c\
src/utils.c
dist_man_MANS = doc/tag.1
