AUTOMAKE_OPTIONS = foreign subdir-objects
bin_PROGRAMS = tag
tag_SOURCES = src/include/main.h\
src/include/optarg.h\
src/include/tag.h\
src/include/tag_query.h\
src/include/utils.h\
src/include/info.h\
src/include/xattr_max.h\
src/build_qtree.c\
src/main.c\
src/match.c\
src/optarg.c\
src/query_checker.c\
src/tag_delete.c\
src/tag_get.c\
src/tag_list.c\
src/tag_query.c\
src/tag_set.c\
src/utils.c
